Change flow, learn more button on home screen

--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
         <p class="mid-tagline info-header">Control the Chaos</p>
         <p class="last-tagline info-header">Perfect Your Heist</p>
         <div class="button-wrapper">
-          <a class="large-button fullscreen" href="/resources/rulebook.pdf" target="_blank">Open Rulebook</a>
-          <a class="large-button mobile-only" href="/resources/rulebook.pdf" target="_blank">Rulebook</a>
+          <a class="large-button" href="/pages/about.html">Learn More</a>
         </div>
     </div>
   </div>
