--- a/pages/about.html
+++ b/pages/about.html
@@ -39,6 +39,18 @@
   </nav>
   <div class="main-view">
     <div class="info">
+      <p class="info-header">Shenan-Again: A Tabletop Roleplaying Game</p>
+      <p>Shenan-Again is a game of controlled chaos. You and your friends gather around the table and take on the role of a crew of thieves
+        as they try to pull off a daring heist. 
+        You'll enjoy thrilling successes, and face crushing—but often hilarious—failures. </p>
+        <p>
+          Shenan-Again is a game about taking risks and learning from mistakes. It's about second (and third) chances. 
+        See, Shenan-Again isn't just a heist story. It's a time-loop heist story.</p> 
+        <p>In Shenan-Again, your characters relive the same heist three times, giving you three chances to get it right.
+        On that first attempt, things will quickly fall to pieces, but the second and third time around you'll be able to perfect your plan. 
+        </p>
+    </div>
+    <div class="info">
       <p class="info-header">What's a Tabletop Roleplaying Game?</p>
       <p>
         A tabletop roleplaying game, or TTRPG, is a collaborative storytelling game. 
@@ -50,32 +62,14 @@
       </p>
       <p>
         As a player, you describe how you'd like to react to the problems they're faced with. 
-        If there's a chance your action could fail, you'll roll some dice to see what happens, 
-        and that's where the <a href="/pages/rulebook.html">rules</a> come in.
+        With each action you attempt, 
+        some dice (and a few other factors) will determine if you succeed with style or fail miserably, and that's where the rules come in.
       </p>
+      <div class="button-wrapper">
+        <a class="large-button fullscreen" href="/pages/rulebook.html">Get the Rulebook</a>
+        <a class="large-button mobile-only" href="/pages/rulebook.html">Rulebook</a>
+      </div>
     </div>
-    <div class="info">
-      <p class="info-header">Shenan-Again</p>
-      <p>Shenan-Again is a game of controlled chaos. You and your friends take on the role of a crew of thieves attempting 
-        to pull off a difficult heist using a Coil, an alien machine that warps time. 
-        You'll enjoy thrilling success, and face crushing—but often hilarious—failure. </p>
-        <p>
-          In the end, Shenan-Again is a game about taking risks and learning from mistakes. It's about second (and third) chances. 
-        See, Shenan-Again isn't just a heist story. It's a time-loop heist story.</p> 
-        <p>In Shenan-Again, you relive the same heist three times, giving you three chances to get it right. 
-        The second and third time around, you'll already know a lot of what's going on, 
-        letting you to perfect your plan. 
-        </p>
-    </div>
-    <div class="info">
-      <p class="info-header">Our Origin Story</p>
-      <p>Shenan-Again began as a way for a group of friends to play a fun, light TTRPG with mininmal prep time.</p>
-      <p>I asked my players what sort of game they'd like to play for a one-off, and the most popular choices were a heist game and a time-loop game. One of my players responded, "Well, why not both?"
-      </p>
-      <p>And I thought, "That sounds wild—let's give it a go!" And so Shenan-Again was born.</p>
-      <p>It's been a crazy journey up to this point, and I'm sure it will continue to be. We're thrilled to be getting Shenan-Again out of our heads and onto your table!</p>
-    </div>
-  </div>    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto fullscreen">
       <li class="nav-item">
