--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -46,13 +46,12 @@
         so instead of asking you to pay for the rulebook, we'd like you to pay it forward in a different way.
       </p>
       <p>
-        However best works for you, but here's the basic idea: after you've played a game or two of Shenan-Again yourself, find a way to share it with someone new.
+        Here's the basic idea: after you've played a game or two of Shenan-Again yourself, find a way to share it with someone new.
       </p>
       <p>
         You might post about us on social media, share this website with a friend, or write us a review in your blog.
         If your friend GMed the game for you, maybe you'll get together a new group and run it with them.</p>
-        <p>If there's anything you'd like to see addded or improved upon in our website, game mechanics, rulebook, or anywhere else, you can fill out this
-        <a href="">feedback form</a>.
+        <p>Once you've done that, instead of paying us cash, tell us the way you chose to pay it forward by filling out this <a href="">three-question report.</a>
         <p>We hope you enjoy the game, and we can't wait to hear about the crazy shenanigans it leads you into!</p>
       </p>
     </div>
