Make Tools rulebook link go to Rulebook page, not open PDF

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -55,7 +55,7 @@
         For example, if you roll three dice, you've only got a 42% chance of rolling at least one 6, 
         while on five dice, that goes up to 60%
       </p>
-      <p>Open the <a href="/resources/rulebook.pdf" target="_blank">rulebook</a> for detais on challenges rolls</p>
+      <p>Go to the <a href="/pages/rulebook.html">rulebook</a> for detais on challenges rolls</p>
     </div>
   </div>
   <div class="grid-view">
