Finish inital Home, Rulebook, About, Tools, and Contribute Pages

--- a/pages/about.html
+++ b/pages/about.html
@@ -40,7 +40,7 @@
   <div class="main-view">
     <div class="info">
       <p class="info-header">Shenan-Again: A Tabletop Roleplaying Game</p>
-      <p>Shenan-Again is a game of controlled chaos. You and your friends gather around the table and take on the role of a crew of thieves
+      <p>Shenan-Again is a game of controlled chaos. You gather with your friends around the table and take on the role of a crew of thieves
         as they try to pull off a daring heist. 
         You'll enjoy thrilling successes, and face crushing—but often hilarious—failures. </p>
         <p>
@@ -54,16 +54,16 @@
       <p class="info-header">What's a Tabletop Roleplaying Game?</p>
       <p>
         A tabletop roleplaying game, or TTRPG, is a collaborative storytelling game. 
-        Each of you takes on the of one of the protagonists of the story.
+        Each player takes on the of one of the protagonists of the story, except one—the Gamemaster.
       </p>
       <p>
-        One of you is the Gamemaster. As Gamemaster, your job is to present the players with people 
-        and obstacles that the players will need to deal with to accomplish their goal.
+        As the Gamemaster, you present your players with people 
+        and obstacles that get between the players and their goal.
       </p>
       <p>
-        As a player, you describe how you'd like to react to the problems they're faced with. 
+        As a player, you decide how you'd like to solve these problems. 
         With each action you attempt, 
-        some dice (and a few other factors) will determine if you succeed with style or fail miserably, and that's where the rules come in.
+        some dice—and a few other factors—will determine if you nail it or fail miserably. That's where the rules of the game come in.
       </p>
       <div class="button-wrapper">
         <a class="large-button fullscreen" href="/pages/rulebook.html">Get the Rulebook</a>
