--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
         <li class="nav-item">
           <a class="nav-link" href="/pages/contribute.html">Contribute</a>
         </li>
+        <!-- <li class="nav-item dropdown fullscreen">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Tools</a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/pages/charts.html">Probability Charts</a>
+            <a class="dropdown-item" href="/pages/quick-reference.html">Quick Reference</a>
+          </div>
+        </li> -->
       </ul>
     </div>
   </nav>
