--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -42,8 +42,8 @@
       <p class="info-header">
           Contribute
       </p>
-      <p>Our goal is for Shenan-Again to be completely and truly free to play, for as many people as possible, 
-        so instead of asking you to pay for the rulebook, we'd like you to pay it forward in a different way.
+      <p>Our goal is for Shenan-Again to be completely and truly free to play, for as many people as possible. 
+        So instead of asking you to pay cash for the rulebook, we'd like you to pay it forward in a different way.
       </p>
       <p>
         Here's the basic idea: after you've played a game or two of Shenan-Again yourself, find a way to share it with someone new.
@@ -51,8 +51,9 @@
       <p>
         You might post about us on social media, share this website with a friend, or write us a review in your blog.
         If your friend GMed the game for you, maybe you'll get together a new group and run it with them.</p>
-        <p>Once you've done that, instead of paying us cash, tell us the way you chose to pay it forward by filling out this <a href="">three-question report.</a>
-        <p>We hope you enjoy the game, and we can't wait to hear about the crazy shenanigans it leads you into!</p>
+        <p>Then, just
+          explain how you chose to pay it forward in this <a href="https://forms.gle/86kuP8G59N3anrbX7" target="_blank">three-question report</a>
+        <p>We hope you enjoy the game, and we can't wait to hear what kinds of crazy shenanigans it leads you to!</p>
       </p>
     </div>
   </div>    
