--- a/pages/tools.html
+++ b/pages/tools.html
@@ -44,18 +44,18 @@
         Probability Charts
       </div>
       <p>
-        Use these charts to decide how many dice you'll roll for a given challenge
+        Use these charts to help decide how many dice you'll roll for a given challenge
       </p>
-      <p>The tables show the nunber of dice rolled on the left, 
-        and the probability of rolling at least one of the target number(s) on the right</p>
+      <p>The tables show the nunber of dice rolled on the left, and on the right,
+        the probability of rolling at least one of the target number(s)</p>
       <p>
-        The charts are the same info, graphed on a curve
+        The charts show the same info, graphed visually on a curve
       </p>
       <p> 
         For example, if you roll three dice, you've only got a 42% chance of rolling at least one 6, 
         while on five dice, that goes up to 60%
       </p>
-      <p>Go to the <a href="/pages/rulebook.html">rulebook</a> for detais on challenges rolls</p>
+      <p>See the <a href="/pages/rulebook.html">rulebook</a> for details on challenges rolls</p>
     </div>
   </div>
   <div class="grid-view">
