--- a/pages/about.html
+++ b/pages/about.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
-  <link rel="icon" href="/images/clock.PNG">
+  <link rel="icon" href="/clock-icon.ico">
   <title>Shenan-Again</title>
 </head>
 
 <body>
   <img class="background-image" src="/images/background.png"/>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="/index.html"><img height=50px; src="/images/clock.PNG"></a>
+    <a class="navbar-brand" href="/index.html"><img height=50px; src="/images/clock.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -42,7 +42,7 @@
       <p class="info-header">Shenan-Again: A Tabletop Roleplaying Game</p>
       <p>Shenan-Again is a game of controlled chaos. You gather with your friends around the table and take on the role of a crew of thieves
         as they try to pull off a daring heist. 
-        You'll enjoy thrilling successes, and face crushing—but often hilarious—failures. </p>
+        You'll enjoy thrilling successes, and face crushing&mdash;but often hilarious&mdash;failures. </p>
         <p>
           Shenan-Again is a game about taking risks and learning from mistakes. It's about second (and third) chances. 
         See, Shenan-Again isn't just a heist story. It's a time-loop heist story.</p> 
@@ -54,7 +54,7 @@
       <p class="info-header">What's a Tabletop Roleplaying Game?</p>
       <p>
         A tabletop roleplaying game, or TTRPG, is a collaborative storytelling game. 
-        Each player takes on the of one of the protagonists of the story, except one—the Gamemaster.
+        Each player takes on the of one of the protagonists of the story, except one&mdash;the Gamemaster.
       </p>
       <p>
         As the Gamemaster, you present your players with people 
@@ -63,7 +63,7 @@
       <p>
         As a player, you decide how you'd like to solve these problems. 
         With each action you attempt, 
-        some dice—and a few other factors—will determine if you nail it or fail miserably. That's where the rules of the game come in.
+        some dice&mdash;and a few other factors&mdash;will determine if you nail it or fail miserably. That's where the rules of the game come in.
       </p>
       <div class="button-wrapper">
         <a class="large-button fullscreen" href="/pages/rulebook.html">Get the Rulebook</a>
@@ -77,7 +77,7 @@
       </li>
     </ul>
     <a class="grey-link footer-text" href="">Contact Us</a>
-    <a class="footer-text">© 2022 Ben Schulzke</a>
+    <a class="footer-text">&copy 2022 Ben Schulzke</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
