Fixing minor issues

--- a/pages/about.html
+++ b/pages/about.html
@@ -70,15 +70,15 @@
         <a class="large-button mobile-only" href="/pages/rulebook.html">Rulebook</a>
       </div>
     </div>
-  <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
-    <ul class="navbar-nav mr-auto fullscreen">
-      <li class="nav-item">
-        <a class="footer-text grey-link" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
-      </li>
-    </ul>
-    <a class="grey-link footer-text" href="">Contact Us</a>
-    <a class="footer-text">&copy; 2022 Ben Schulzke</a>
-  </nav>
+    <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="footer-text grey-link" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
+        </li>
+      </ul>
+      <a class="grey-link footer-text" href="https://forms.gle/86kuP8G59N3anrbX7">Contact Us</a>
+      <a class="footer-text fullscreen">&copy; 2022 Ben Schulzke</a>
+    </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
