--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -10,8 +10,8 @@
 </head>
 
 <body>
-    <img class="background-image" src="/images/background.png"/>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <img class="background-image" src="/images/background.png"/>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/index.html"><img height=50px; src="/images/clock.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -26,7 +26,7 @@
           <a class="nav-link" href="/pages/rulebook.html">Rulebook</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/pages/about.html">About</a>
+          <a class="nav-link" href="/pages/about.html">About</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/tools.html">Tools</a>
@@ -56,6 +56,7 @@
         <p>We hope you enjoy the game, and we can't wait to hear what kinds of crazy shenanigans it leads you to!</p>
       </p>
     </div>
+  </div>
   </div>    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto">
@@ -63,8 +64,8 @@
         <a class="footer-text grey-link" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
       </li>
     </ul>
-    <a class="grey-link footer-text" href="">Contact Us</a>
-    <a class="footer-text">&copy; 2022 Ben Schulzke</a>
+    <a class="grey-link footer-text" href="https://forms.gle/86kuP8G59N3anrbX7">Contact Us</a>
+    <a class="footer-text fullscreen">&copy; 2022 Ben Schulzke</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
