--- a/pages/contribute.html
+++ b/pages/contribute.html
@@ -64,7 +64,7 @@
         <a class="footer-text grey-link" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
       </li>
     </ul>
-    <a class="grey-link footer-text" href="https://forms.gle/86kuP8G59N3anrbX7">Contact Us</a>
+    <a class="grey-link footer-text" href="https://forms.gle/86kuP8G59N3anrbX7" target="_blank">Contact Us</a>
     <a class="footer-text fullscreen">&copy; 2022 Ben Schulzke</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
