--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="/clock-icon.ico">
+  <script src="javascript.js"></script>
   <title>Shenan-Again</title>
 </head>
 
@@ -45,7 +46,7 @@
     </div>
   </nav>
   <div class="main-view">
-    <div class="info vertical-center">
+    <div id="home-info" class="info vertical">
         <p class="info-header">Bend Time</p>
         <p class="mid-tagline info-header">Control the Chaos</p>
         <p class="last-tagline info-header">Perfect Your Heist</p>
