--- a/pages/tools.html
+++ b/pages/tools.html
@@ -6,17 +6,19 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="/clock-icon.ico">
+  <script src="/javascript.js"></script>
+  <script src="/roles.js"></script>
+  <script src="/calculator.js"></script>
   <title>Shenan-Again</title>
 </head>
 
-<body>
+<body onload="getRole()" onload="calculate()">
     <img class="background-image light-background-image" src="/images/background.png"/>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/index.html"><img height=50px; src="/images/clock.png"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon" onclick="toggleToolsMenuIcon()"></span>
     </button>
-  
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
@@ -37,39 +39,109 @@
       </ul>
     </div>
   </nav>
-  <div class="light-theme">
-    <div class="grid-view">
-      <img class="fullscreen" src="/images/chart-key.png"/>
-      <div class="info">
-        <div class="info-header">
-          Probability Charts
-        </div>
-        <p>
-          Use these charts to help decide how many dice you'll roll for a given challenge
-        </p>
-        <p>The tables show the nunber of dice rolled on the left, and on the right,
-          the probability of rolling at least one of the target number(s)</p>
-        <p>
-          The charts show the same info, graphed visually on a curve
-        </p>
-        <p> 
-          For example, if you roll three dice, you've only got a 42% chance of rolling at least one 6, 
-          while on five dice, that goes up to 60%
-        </p>
-        <p>See the <a href="/pages/rulebook.html">rulebook</a> for details on challenges rolls</p>
+  <div id="tools-sidebar">
+      <div id="tools-collapse" class="collapse-icon" onclick="toggleTools()">&plus;</div>
+      <div id="tools-menu">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" onclick="openTool('charts')">Charts</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" onclick="openTool('calculator')">Calculator<span class="sr-only"></span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" onclick="openTool('roles')">Characters</a>
+          </li>
       </div>
     </div>
+  <div class="light-theme">
+    <div id="charts" onclick="closeTools()">
       <div class="grid-view">
-        <img class="grid-image" src="/images/table-6.png"/>
-        <img class="grid-image" src="/images/table-5-6.png"/>
-        <img class="grid-image" src="/images/table-4-5-6.png"/>
+        <img class="fullscreen" src="/images/chart-key.png"/>
+        <div class="info">
+          <div class="info-header">
+            Probability Charts
+          </div>
+          <p>
+            Use these charts to help decide how many dice you'll roll for a given challenge
+          </p>
+          <p>The tables show the nunber of dice rolled on the left, and on the right,
+            the probability of rolling at least one of the target number(s)</p>
+          <p>
+            The charts show the same info, graphed visually on a curve
+          </p>
+          <p> 
+            For example, if you roll three dice, you've only got a 42% chance of rolling at least one 6, 
+            while on five dice, that goes up to 60%
+          </p>
+          <p>See the <a href="/pages/rulebook.html">rulebook</a> for details on challenges rolls</p>
+        </div>
       </div>
-      <div class="grid-view">
-      <img class="grid-image" src="/images/chart-6.png"/>
-      <img class="grid-image" src="/images/chart-5-6.png"/>
-      <img class="grid-image" src="/images/chart-4-5-6.png"/>
-    </div>      
-  </div>
+        <div class="grid-view">
+          <img class="grid-image" src="/images/table-6.png"/>
+          <img class="grid-image" src="/images/table-5-6.png"/>
+          <img class="grid-image" src="/images/table-4-5-6.png"/>
+        </div>
+        <div class="grid-view">
+        <img class="grid-image" src="/images/chart-6.png"/>
+        <img class="grid-image" src="/images/chart-5-6.png"/>
+        <img class="grid-image" src="/images/chart-4-5-6.png"/>
+      </div>      
+    </div>
+    </div>
+    <div class="light-theme">
+      <div id="calculator" onclick="closeTools()">
+        <div class="grid-view">
+          <div class="info">
+            <div class="info-header">
+              Probability Calculator
+            </div>
+            <p>Use this calculator to decide how many dice to roll for a given challenge</p>
+          </div>
+          <div class="prob-calculator">
+            <div class="form-outline">
+              <input onchange="calculate()" type="number" id="dice-selector" class="form-control" />
+              <label class="form-label" for="typeNumber">Number input</label>
+            </div>
+          </div>
+        </div> 
+        <div class="grid-view">
+        </div>
+        <div class="grid-view">
+        </div>    
+      </div>
+      </div>
+      <div class="light-theme">
+        <div id="roles" onclick="closeTools()">
+          <div class="grid-view">
+            <div class="info">
+              <div class="info-header">
+                Character Concepts
+              </div>
+              <p>Your character concept is a one-sentence description of the character you'll play in Shenan-Again. See the rulebook for details on character creation.</p>
+              <div class="display-rows">
+                <select id="role-selector" class="form-select" aria-label="Default select example">
+                  <option value="burglar" selected>Burglar</option>
+                  <option value="muscle" >Muscle</option>
+                  <option value="con">Con</option>
+                  <option value="hacker">Hacker</option>
+                </select>
+                <br>
+                <a class="large-button" onclick="getRole()">Generate</a>
+              </div>
+            </div>
+            <div class="grid-view card">
+              <div id="generated-role" class="card-text">
+              </div>
+            </div>
+            </div>
+          </div>
+          <div class="grid-view">
+          </div>
+          <div class="grid-view">
+          </div>
+        </div>
+    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
