--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,10 +6,11 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="/clock-icon.ico">
+  <script src="/javascript.js"></script>
   <title>Shenan-Again</title>
 </head>
 
-<body>
+<body onload="validateEmail()">
   <img class="background-image" src="/images/background.png"/>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/index.html"><img height=50px; src="/images/clock.png"></a>
@@ -20,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/index.html">Home <span class="sr-only"></span></a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/pages/rulebook.html">Rulebook</a>
@@ -32,31 +33,30 @@
           <a class="nav-link" href="/pages/tools.html">Tools</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="/pages/contribute.html">Contribute</a>
+          <a class="nav-link" href="/pages/contribute.html">Contribute</a>
         </li>
       </ul>
     </div>
   </nav>
   <div class="main-view">
     <div class="info">
-      <p class="info-header">
-          Contribute
-      </p>
-      <p>Our goal is for Shenan-Again to be completely and truly free to play, for as many people as possible. 
-        So instead of asking you to pay cash for the rulebook, we'd like you to pay it forward in a different way.
-      </p>
-      <p>
-        Here's the basic idea: after you've played a game or two of Shenan-Again yourself, find a way to share it with someone new.
-      </p>
-      <p>
-        You might post about us on social media, share this website with a friend, or write us a review in your blog.
-        If your friend GMed the game for you, maybe you'll get together a new group and run it with them.</p>
-        <p>Then, just
-          explain how you chose to pay it forward in this <a href="https://forms.gle/86kuP8G59N3anrbX7" target="_blank">three-question report</a>
-        <p>We hope you enjoy the game, and we can't wait to hear what kinds of crazy shenanigans it leads you to!</p>
-      </p>
+      <p class="info-header">Contact Us</p>
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Your email address</label>
+          <input id="emailAddress" type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+          <span id="txtHint"></span>
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Message</label>
+          <textarea id="message-body" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+      </form>
+        <div class="button-wrapper">
+          <a class="large-button" onclick="sendEmail()">Submit</a>
+        </div>
+        <span id="email-success"></span>       
     </div>
-  </div>
   </div>    
   <nav class="navbar footer fixed-bottom navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto">
@@ -64,7 +64,7 @@
         <a class="footer-text grey-link" href="https://github.com/bschulzke/shenan-again-creative-project"  target="_blank">GitHub</a>
       </li>
     </ul>
-    <a class="grey-link footer-text" href="contact.html>Contact Us</a>
+    <a class="grey-link footer-text" href="contact.html">Contact Us</a>
     <a class="footer-text fullscreen">&copy; 2022 Ben Schulzke</a>
   </nav>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
