add random role generation, fix contribute.html footer

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -130,7 +130,8 @@
               <p>Your character concept is a one-sentence description of the character you'll play in Shenan-Again. See the rulebook for details on character creation.</p>
               <div class="display-rows">
                 <select id="role-selector" class="form-select" aria-label="Default select example">
-                  <option value="burglar" selected>Burglar</option>
+                  <option value="random" selected>Random Role</option>
+                  <option value="burglar">Burglar</option>
                   <option value="muscle" >Muscle</option>
                   <option value="con">Con</option>
                   <option value="hacker">Hacker</option>
