update tools formatting, add active tool class

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -46,12 +46,12 @@
       <div id="tools-menu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" onclick="openTool('charts')">Charts</a>
+            <a id="calculator-menu-option" class="nav-link active" onclick="openTool('calculator')">Calculator<span class="sr-only"></span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" onclick="openTool('calculator')">Calculator<span class="sr-only"></span></a>
+            <a id="charts-menu-option" class="nav-link" onclick="openTool('charts')">Charts</a>
           </li>
-          <li class="nav-item">
+          <li id="roles-menu-option" class="nav-item">
             <a class="nav-link" onclick="openTool('roles')">Characters</a>
           </li>
       </div>
