--- a/pages/tools.html
+++ b/pages/tools.html
@@ -107,7 +107,7 @@
             <div class="prob-calculator">
               <div class="prob-selector">
                 <div class="form-outline">
-                  <input max=18 min=0 value=0 onchange="calculate()" type="number" id="dice-selector" class="form-control" />
+                  <input min=0 value=0 onchange="calculate()" type="number" id="dice-selector" class="form-control" />
                 </div>
                 <div class="incrementer">
                   <div class="plus" onclick="addDice()">&plus;</div>
