increase width of incrementor on prob calc

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -110,8 +110,10 @@
                   <input min=0 value=0 onchange="calculate()" type="number" id="dice-selector" class="form-control" />
                 </div>
                 <div class="incrementer">
-                  <div class="plus" onclick="addDice()">&plus;</div>
-                  <div class="plus" onclick="subtractDice()">&minus;</div>
+                  <div>
+                    <div class="plus" onclick="addDice()">&plus;</div>
+                    <div class="plus" onclick="subtractDice()">&minus;</div>
+                  </div>
                 </div>
               </div>
             </div>
