--- a/pages/tools.html
+++ b/pages/tools.html
@@ -42,7 +42,7 @@
 
   <div class="light-theme">
     <div id="tools-sidebar">
-      <div id="tools-collapse" class="collapse-icon" onclick="toggleTools()">&plus;</div>
+      <div id="tools-collapse" class="collapse-icon" onclick="toggleTools()">Tools</div>
       <div id="tools-menu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
@@ -111,7 +111,7 @@
                 </div>
                 <div class="incrementer">
                   <div>
-                    <div class="plus" onclick="addDice()">&plus;</div>
+                    <div id="add-dice" class="plus" onclick="addDice()">&plus;</div>
                     <div class="plus" onclick="subtractDice()">&minus;</div>
                   </div>
                 </div>
