TEST: font awesome

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://use.fontawesome.com/06c9445bfb.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="/clock-icon.ico">
@@ -42,7 +43,7 @@
 
   <div class="light-theme">
     <div id="tools-sidebar">
-      <div id="tools-collapse" class="collapse-icon" onclick="toggleTools()">Tools</div>
+      <div id="tools-collapse" class="collapse-icon" onclick="toggleTools()"><i class="fa-solid fa-wrench"></i></div>
       <div id="tools-menu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
