Switch back to text

--- a/pages/tools.html
+++ b/pages/tools.html
@@ -43,7 +43,7 @@
 
   <div class="light-theme">
     <div id="tools-sidebar">
-      <div id="tools-collapse" class="collapse-icon" onclick="toggleTools()"><i class="fa-solid fa-wrench"></i></div>
+      <div id="tools-collapse" class="collapse-icon" onclick="toggleTools()">Tools</div>
       <div id="tools-menu">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
