--- a/pages/tools.html
+++ b/pages/tools.html
@@ -108,7 +108,7 @@
             <div class="prob-calculator">
               <div class="prob-selector">
                 <div class="form-outline">
-                  <input min=0 value=0 onchange="calculate()" type="number" id="dice-selector" class="form-control" />
+                  <input min=0 value=1 onchange="calculate()" type="number" id="dice-selector" class="form-control" />
                 </div>
                 <div class="incrementer">
                   <div>
@@ -121,6 +121,7 @@
           </div>
           <div id="prob-card" class="grid-view card">
             <div id="prob-results" class="card-text">
+              17% chance of rolling at least one six on 1 dice
             </div>
           </div>
         </div>           
