--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" href="/clock-icon.ico">
-  <script src="js/main.js"></script>
+  <script src="/js/main.js"></script>
   <title>Shenan-Again</title>
 </head>
 
