--- a/pages/tools.html
+++ b/pages/tools.html
@@ -9,11 +9,10 @@
   <link rel="icon" href="/clock-icon.ico">
   <script src="/js/main.js"></script>
   <script src="/js/roles.js"></script>
-  <script src="/js/calculator.js"></script>
   <title>Shenan-Again</title>
 </head>
 
-<body onload="getRole()" onload="calculate()">
+<body onload="getRole()">
     <img class="background-image light-background-image" src="/images/background.png"/>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="/index.html"><img height=50px; src="/images/clock.png"></a>
@@ -108,12 +107,12 @@
             <div class="prob-calculator">
               <div class="prob-selector">
                 <div class="form-outline">
-                  <input min=0 value=1 onchange="calculate()" type="number" id="dice-selector" class="form-control" />
+                  <input min=0 value=1 v-model="numDice" oninput="this.value = Math.abs(this.value)" type="number" id="dice-selector" class="form-control"/>
                 </div>
                 <div class="incrementer">
                   <div>
-                    <div id="add-dice" class="plus" onclick="addDice()">&plus;</div>
-                    <div class="plus" onclick="subtractDice()">&minus;</div>
+                    <div id="add-dice" class="plus" @click="addDice">&plus;</div>
+                    <div class="plus" @click="subtractDice">&minus;</div>
                   </div>
                 </div>
               </div>
@@ -121,7 +120,7 @@
           </div>
           <div id="prob-card" class="grid-view card">
             <div id="prob-results" class="card-text">
-              17% chance of rolling at least one six on 1 dice
+              {{ percentChance }}% chance of rolling at least one six on {{numDice}} dice
             </div>
           </div>
         </div>           
@@ -170,6 +169,8 @@
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> 
+<script text="type/javascript" src="/js/vue-calc.js"></script>
 </body>
 
 </html>
