--- a/pages/tools.html
+++ b/pages/tools.html
@@ -154,7 +154,7 @@
                 </div>
               </div>
             </div>
-            <div class="grid-view card">
+            <div class="grid-view card" oncontextmenu="getRole();return false;">
               <div id="generated-role" class="card-text">
               </div>
             </div>
